--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 142,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 143,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 144,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 145,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 146,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 147,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -263,19 +263,16 @@
     "                \"val_size\": 0.2,\n",
     "                \"early_stopping_patience\": 5},\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
-    "    \"virtual_batch_size_ratio\": [0.125, 0.25,0.5],\n",
+    "    \"virtual_batch_size_ratio\": [0.125, 0.25,0.5,1.0],\n",
     "    \"batch_size\": [256,512,1024,2048],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
     "    \"n_d\": [4, 12],\n",
     "    \"n_steps\": [3, 10],\n",
     "    \"gamma\": [1.0, 2.0],\n",
-    "    \"cat_emb_dim\": [1,3],\n",
     "    \"n_independent\": [2, 3],\n",
     "    \"n_shared\": [2, 3],\n",
-    "    \"lambda_sparse\": [0.001, 0.01],\n",
-    "    \"momentum\": [0.001, 0.4],\n",
-    "    \"clip_value\": [1, 2],\n",
+    "   \n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
     "        \"AdamW\": {\"weight_decay\": [0.0001, 0.01]}\n",
@@ -295,19 +292,16 @@
     "                \"early_stopping_patience\": 5},\n",
     "    \n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
-    "    \"virtual_batch_size_ratio\": [0.25,0.5],\n",
+    "    \"virtual_batch_size_ratio\": [0.25,0.5,1.0],\n",
     "    \"batch_size\": [16,32,64],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
-    "    \"n_d\": [4, 48],\n",
+    "    \"n_d\": [4, 12],\n",
     "    \"n_steps\": [3, 10],\n",
     "    \"gamma\": [1.0, 2.0],\n",
-    "    \"cat_emb_dim\": [1,3],\n",
     "    \"n_independent\": [2, 3],\n",
     "    \"n_shared\": [2, 3],\n",
-    "    \"lambda_sparse\": [0.001, 0.01],\n",
-    "    \"momentum\": [0.001, 0.4],\n",
-    "    \"clip_value\": [1, 2],\n",
+    "    \n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
     "        \"AdamW\": {\"weight_decay\": [0.0001, 0.01]}\n",
@@ -329,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 148,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -342,6 +336,25 @@
     "                \"early_stopping_patience\": 5},\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
     "    \"batch_size\": [256,512,1024,2048],\n",
+    "    \"input_embed_dim\": [16,32,64],\n",
+    "    \"embedding_initialization\": [\"kaiming\", \"kaiming_uniform\", \"kaiming_normal\"],\n",
+    "    \"shared_embedding_fraction\": [0.125,0.25,0.5],\n",
+    "    \"num_heads\": [6,10],\n",
+    "    \"num_attn_blocks\":[4,10],\n",
+    "    \"attn_dropout\":[0.05,0.3],\n",
+    "    \"add_norm_dropout\":[0.05,0.3],\n",
+    "    \"ff_dropout\":[0.05,0.3],\n",
+    "    \"ff_hidden_multiplier\":[2,6],\n",
+    "    \"transformer_activation\":[\"GEGLU\", \"ReGLU\",\"SwiGLU\"],\n",
+    "    \"embedding_dropout\":[0.05,0.3],\n",
+    "    \"batch_norm_continuous_input\":[0.05,0.3],\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -383,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 149,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -437,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 150,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -527,13 +540,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 151,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
    "source": [
     "catembed_large_param_grid = {\n",
-    "\"outer_params\": {\"hyperopt_evals\": 3,\n",
+    "\"outer_params\": {\"hyperopt_evals\": 10,\n",
     "                'auto_lr_find': False,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.2,\n",
@@ -543,8 +556,8 @@
     "\"batch_size\": [128,256,512,1024],\n",
     "\"learning_rate\": [0.001,0.0001],\n",
     "\"layers\": [\"128-64-32\", \"64-32-16\", \"512-128-32\"],\n",
-    "\"activation\": [\"ReLU\", \"Tanh\", \"LeakyReLU\"],\n",
-    "\"initialization\": [\"kaiming\" , \"xavier\", \"random\"],\n",
+    "\"activation\": [\"ReLU\", \"LeakyReLU\"],\n",
+    "\"initialization\": [\"kaiming\" , \"xavier\"],\n",
     "\"dropout\": [0.0,0.3],\n",
     "\n",
     "\"optimizer_fn\": {\n",
@@ -558,7 +571,7 @@
     "}\n",
     "\n",
     "catembed_small_param_grid = {\n",
-    "\"outer_params\": {\"hyperopt_evals\": 3,\n",
+    "\"outer_params\": {\"hyperopt_evals\": 100,\n",
     "                'auto_lr_find': False,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.2,\n",
@@ -569,7 +582,7 @@
     "\"learning_rate\": [0.001,0.0001],\n",
     "\"layers\": [\"128-64-32\", \"64-32-16\", \"1024-512-32\", \"512-128-32\"],\n",
     "\"activation\": [\"ReLU\", \"Tanh\", \"LeakyReLU\"],\n",
-    "\"initialization\": [\"kaiming\", \"xavier\",\"random\"],\n",
+    "\"initialization\": [\"kaiming\", \"xavier\",],\n",
     "\"dropout\": [0.0,0.3],\n",
     "\n",
     "\"optimizer_fn\": {\"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -592,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 152,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -647,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 153,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -702,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 154,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -734,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 155,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -795,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 156,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
