--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"../output/catembed_benchmark.csv\")"
+    "df = pd.read_csv(r\"../output/xgbcatboost.csv\")"
    ]
   },
   {
@@ -43,146 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>model</th>\n",
-       "      <th>run_time</th>\n",
-       "      <th>eval_metric</th>\n",
-       "      <th>best_params</th>\n",
-       "      <th>output_metrics</th>\n",
-       "      <th>debug_ytrue</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>mse</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>recall</th>\n",
-       "      <th>precision</th>\n",
-       "      <th>auc</th>\n",
-       "      <th>area_under_pr</th>\n",
-       "      <th>r2_score</th>\n",
-       "      <th>rmse</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>fttransformer</td>\n",
-       "      <td>462.767147</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'AdamW_weight_decay': 0.00039433546917991806,...</td>\n",
-       "      <td>{'mse': 0.43777984500887185, 'rmse': 0.6616493...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.437780</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.671509</td>\n",
-       "      <td>0.661649</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>fttransformer</td>\n",
-       "      <td>3221.501979</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'AdamW_weight_decay': 0.000936224711762532, '...</td>\n",
-       "      <td>{'mse': 0.5708966890941433, 'rmse': 0.75557705...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.570897</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.571624</td>\n",
-       "      <td>0.755577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>housing</td>\n",
-       "      <td>categoryembedding</td>\n",
-       "      <td>164.705062</td>\n",
-       "      <td>mse</td>\n",
-       "      <td>{'AdamW_weight_decay': 0.007850870740091056, '...</td>\n",
-       "      <td>{'mse': 1.3037851873733184, 'rmse': 1.14183413...</td>\n",
-       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.303785</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.021696</td>\n",
-       "      <td>1.141834</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   dataset              model     run_time eval_metric  \\\n",
-       "0  housing      fttransformer   462.767147         mse   \n",
-       "2  housing      fttransformer  3221.501979         mse   \n",
-       "1  housing  categoryembedding   164.705062         mse   \n",
-       "\n",
-       "                                         best_params  \\\n",
-       "0  {'AdamW_weight_decay': 0.00039433546917991806,...   \n",
-       "2  {'AdamW_weight_decay': 0.000936224711762532, '...   \n",
-       "1  {'AdamW_weight_decay': 0.007850870740091056, '...   \n",
-       "\n",
-       "                                      output_metrics  \\\n",
-       "0  {'mse': 0.43777984500887185, 'rmse': 0.6616493...   \n",
-       "2  {'mse': 0.5708966890941433, 'rmse': 0.75557705...   \n",
-       "1  {'mse': 1.3037851873733184, 'rmse': 1.14183413...   \n",
-       "\n",
-       "                                         debug_ytrue  f1       mse  accuracy  \\\n",
-       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  0.437780       NaN   \n",
-       "2  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  0.570897       NaN   \n",
-       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  1.303785       NaN   \n",
-       "\n",
-       "   recall  precision  auc  area_under_pr  r2_score      rmse  \n",
-       "0     NaN        NaN  NaN            NaN  0.671509  0.661649  \n",
-       "2     NaN        NaN  NaN            NaN  0.571624  0.755577  \n",
-       "1     NaN        NaN  NaN            NaN  0.021696  1.141834  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['debug_ypred'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 28\u001b[0m\n\u001b[1;32m     21\u001b[0m     max_rows \u001b[38;5;241m=\u001b[39m filtered_df\u001b[38;5;241m.\u001b[39msort_values(metric_to_maximize)\n\u001b[1;32m     23\u001b[0m sel_cols \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun_time\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     24\u001b[0m        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124meval_metric\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbest_params\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutput_metrics\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     25\u001b[0m  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdebug_ypred\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mf1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmse\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     26\u001b[0m        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrecall\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprecision\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauc\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124marea_under_pr\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2_score\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrmse\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 28\u001b[0m \u001b[43mmax_rows\u001b[49m\u001b[43m[\u001b[49m\u001b[43msel_cols\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m50\u001b[39m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/clean/lib/python3.10/site-packages/pandas/core/frame.py:3767\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3765\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3766\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 3767\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   3769\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3770\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/clean/lib/python3.10/site-packages/pandas/core/indexes/base.py:5877\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5874\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   5875\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5877\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   5879\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   5880\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5881\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/clean/lib/python3.10/site-packages/pandas/core/indexes/base.py:5941\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5938\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   5940\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[0;32m-> 5941\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['debug_ypred'] not in index\""
+     ]
     }
    ],
    "source": [
     "# Specify the metric you want to maximize\n",
-    "metric_to_maximize = 'mse'\n",
+    "metric_to_maximize = 'f1'\n",
     "tomax = {\"f1\": True,\n",
     "         \"mse\": False,\n",
     "         \"accuracy\": True,\n",
@@ -205,7 +87,7 @@
     "    \n",
     "sel_cols = ['dataset', 'model', 'run_time',\n",
     "       'eval_metric', 'best_params', 'output_metrics',\n",
-    " 'debug_ytrue', 'f1', 'mse', 'accuracy',\n",
+    " 'debug_pred', 'f1', 'mse', 'accuracy',\n",
     "       'recall', 'precision', 'auc', 'area_under_pr', 'r2_score', 'rmse']\n",
     "\n",
     "max_rows[sel_cols].head(50)"
