--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,10 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "':' expected after dictionary key (3752171646.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    [1024,2048,2096],\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m ':' expected after dictionary key\n"
+     ]
+    }
+   ],
    "source": [
     "s1dcnn_small_param_grid =  {\n",
     "        \"outer_params\": {\n",
@@ -54,7 +63,7 @@
     "    \n",
     "            \"batch_size\": [8,16,32,64,128],\n",
     "            \"learning_rate\": [0.0001, 0.01],\n",
-    "            \"hidden_size\": [16,32,64,128],\n",
+    "            \"hidden_size\": [1024,2048,2096],\n",
     "            \"scheduler_factor\": [0.1,0.9],\n",
     "            \"scheduler_patience\": [5,15]\n",
     "        }\n",
@@ -70,7 +79,7 @@
     "    \n",
     "            \"batch_size\": [256,512,1024,2048],\n",
     "            \"learning_rate\": [0.01, 0.0001],\n",
-    "            \"hidden_size\": [512,1024,2048],\n",
+    "            \"hidden_size\": [1024,2048,2096],\n",
     "            \"scheduler_factor\": [0.1,0.9],\n",
     "            \"scheduler_patience\": [4,7]\n",
     "        }"
