--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 113,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 114,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
     "            \"validation_fraction\": 0.15,\n",
     "            \"early_stopping_patience\": 6},\n",
     "    \n",
-    "            \"batch_size\": [512,1024,2048],\n",
+    "            \"batch_size\": [512,1024,2048,4096],\n",
     "            \"learning_rate\": [0.01, 0.0001],\n",
     "            \"hidden_size\": [1024,2048,4096],\n",
     "            \"scheduler_factor\": [0.1,0.9],\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 115,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
     "            \"learning_rate_init\": [0.001, 0.01, 0.1],\n",
     "            \"beta_1\":[0.9,0.99,0.8],\n",
     "            \"beta_2\":[0.999,0.9],\n",
-    "            \"batch_size\": [512,1024,2048],\n",
+    "            \"batch_size\": [512,1024,2048,4096],\n",
     "        }"
    ]
   },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 116,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 117,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
     "    \"iterations\": [200, 2000],\n",
     "    \"learning_rate\": [0.001, 0.1],\n",
     "    \"depth\": [4, 10],\n",
-    "    \"colsample_bylevel\": [0.05,1.0],\n",
+    "    #\"colsample_bylevel\": [0.05,1.0],\n",
     "    \"l2_leaf_reg\": [0.5, 5.0],\n",
     "    \"min_child_samples\": [1,100],\n",
     "    \"bagging_temperature\": [0.1,2.0]\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 119,
    "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 120,
    "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 121,
    "id": "1994e417-e992-4166-a4ee-be5216827f5a",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 122,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -326,10 +326,10 @@
     "                \"early_stopping_patience\": 6},\n",
     "\n",
     "\"learning_rate\": [0.001, 0.0001],\n",
-    "\"batch_size\": [512,1024,2048],\n",
+    "\"batch_size\": [512,1024,2048,4096],\n",
     "\"tree_depth\": [4, 7],\n",
-    "\"num_trees\": [8,22],\n",
-    "\"chain_trees\": [False],\n",
+    "\"num_trees\": [4,12],\n",
+    "\"chain_trees\": [False, True],\n",
     "\"gflu_stages\": [2, 4],\n",
     "    \n",
     "\"optimizer_fn\": {\n",
@@ -353,7 +353,7 @@
     "\"batch_size\": [16,32,64,128],\n",
     "\"tree_depth\": [4,7],\n",
     "\"num_trees\": [6,12],\n",
-    "\"chain_trees\": [False],\n",
+    "\"chain_trees\": [False, True],\n",
     "\"gflu_stages\": [2, 4],\n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 123,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -389,13 +389,14 @@
     "                \"early_stopping_patience\": 6},\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25,0.5,1.0],\n",
-    "    \"batch_size\": [512,1024,2048],\n",
+    "    \"batch_size\": [512,1024,2048,4096],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
-    "    \"n_d\": [6, 12],\n",
-    "    \"n_steps\": [3, 10],\n",
+    "    \"n_d\": [8, 32],\n",
+    "    \"n_steps\": [3, 5],\n",
     "    \"gamma\": [1.0, 2.0],\n",
     "    \"n_independent\": [2, 3],\n",
+    "    \"lambda_sparse\": [1e-5,1e-3],\n",
     "    \"n_shared\": [2, 3],\n",
     "   \n",
     "    \"optimizer_fn\": {\n",
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 124,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -460,7 +461,7 @@
     "                \"val_size\": 0.15,\n",
     "                \"early_stopping_patience\": 6},\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
-    "    \"batch_size\": [512,1024,2048],\n",
+    "    \"batch_size\": [512,1024,2048,4096],\n",
     "    #\"input_embed_dim\": [16,32,64],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"shared_embedding_fraction\": [0.125,0.25,0.5],\n",
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 125,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -526,7 +527,7 @@
     "                \"early_stopping_patience\": 6},\n",
     "    \n",
     "    \"learning_rate\": [0.001, 0.0001], \n",
-    "    \"batch_size\": [512,1024,2048],\n",
+    "    \"batch_size\": [512,1024,2048,4096],\n",
     "    \"gflu_stages\": [2,8],\n",
     "    \"gflu_dropout\": [0.0,0.3],\n",
     "    \"embedding_dropout\":[0.0,0.3],\n",
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 126,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -584,11 +585,11 @@
     "                \"early_stopping_patience\": 6},\n",
     "    \n",
     "    \"learning_rate\": [0.01, 0.0001], \n",
-    "    \"batch_size\": [512,1024,2048],\n",
-    "    \"num_layers\": [1,2],\n",
+    "    \"batch_size\": [512,1024,2048,4096],\n",
+    "    #\"num_layers\": [1,2],\n",
     "    \"num_trees\": [1024, 2048, 4096],\n",
     "    \"additional_tree_output_dim\": [2, 3, 4],\n",
-    "    \"depth\": [4, 8],\n",
+    "    \"depth\": [7],\n",
     "    \"choice_function\": [\"entmax15\", \"sparsemax\"],\n",
     "    \"bin_function\": [\"entmoid15\", \"sparsemoid\"],\n",
     "    \"input_dropout\": [0.0, 0.3],\n",
@@ -614,7 +615,7 @@
     "    \"num_layers\": [1,2],\n",
     "    \"num_trees\": [1024, 2048],\n",
     "    \"additional_tree_output_dim\": [2, 3, 4],\n",
-    "    \"depth\": [4, 7],\n",
+    "    \"depth\": [7],\n",
     "    \"choice_function\": [\"entmax15\", \"sparsemax\"],\n",
     "    \"bin_function\": [\"entmoid15\", \"sparsemoid\"],\n",
     "    \"max_features\": [None, 50, 100],\n",
@@ -652,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 127,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -665,7 +666,7 @@
     "                \"early_stopping_patience\": 6,\n",
     "                \"precision\": 16},\n",
     "\n",
-    "\"batch_size\": [512,1024,2048],\n",
+    "\"batch_size\": [512,1024,2048,4096],\n",
     "\"learning_rate\": [0.001,0.0001],\n",
     "\"layers\": [\"128-64-32\", \"64-32-16\", \"512-128-32\"],\n",
     "\"activation\": [\"ReLU\", \"LeakyReLU\"],\n",
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 128,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -729,7 +730,7 @@
     "                \"val_size\": 0.15,\n",
     "                \"early_stopping_patience\": 6},\n",
     "    \n",
-    "    \"batch_size\": [512,1024,2048],\n",
+    "    \"batch_size\": [512,1024,2048,4096],\n",
     "    \"learning_rate\": [0.01,0.0001],\n",
     "    \"embedding_bias\":[True,False],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
@@ -783,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 129,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -795,7 +796,7 @@
     "                \"val_size\": 0.15,\n",
     "                \"early_stopping_patience\": 6},\n",
     "\n",
-    "    \"batch_size\": [512,1024,2048],\n",
+    "    \"batch_size\": [512,1024,2048,4096],\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
     "    #'attn_embed_dim': [32, 16, 64],\n",
     "    #'num_heads': [2, 4],\n",
@@ -872,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 130,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -897,14 +898,14 @@
     "                            \"validation_fraction\": 0.15},\n",
     "                           \n",
     "                            \"learning_rate\": [0.0001, 0.001],\n",
-    "                            \"batch_size\": [512,1024,2048],\n",
+    "                            \"batch_size\": [512,1024,2048,4096],\n",
     "                            \"scheduler_factor\": [0.1, 0.9],\n",
     "                            \"scheduler_patience\": [3,5]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 131,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -913,45 +914,45 @@
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
     "    #generate_model_template(\"housing\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    #generate_model_template(\"housing\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
     "\n",
     "            \n",
-    "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
-    "\n",
-    "    generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\",\"node\", param_grid = node_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    "     generate_model_template(\"heloc\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "#\n",
+    "  #generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "  #generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "  # generate_model_template(\"heloc\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"covertype\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -986,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 132,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
